--- a/SimpleProject/style.css
+++ b/SimpleProject/style.css
@@ -5,3 +5,9 @@ header {
   background-color: #f0f0f0;
   padding: 10px;
 }
+footer {
+  background-color: #333;
+  color: white;
+  padding: 10px;
+  text-align: center;
+}
